UPDATE PROJECT NAME
 - Update project name in package.json file
 - Update project name in README.md file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-api-concepts",
+  "name": "node-projects-api",
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1"
