--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
